[project]
name = "ai-stock-advisor"
version = "0.1.0"
description = "AI-powered stock advisor agent using OpenAI GPT and Yahoo Finance for automated stock recommendations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.11.4",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.54",
]
